--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="./style-reset.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="fonts" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
-    <title>zattix-electronics</title>
+    <title>shop-electronics</title>
 </head>
 <body>
 
