--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="./style-reset.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" crossorigin="anonymous">
@@ -15,14 +14,63 @@
     <title>shop-electronics</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-nav">
+    <!-- Navbar content -->
+    <div class="container-fluid d-flex align-items-center">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="./assets/logo.png" alt="main-logo" width="30" height="24" class="d-inline-block align-top">
+        ZATTIX
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item d-flex align-items-center">
+            <i class="fas fa-home"></i>
+            <a class="nav-link" href="#">HOME</a>
+          </li>
+          <li class="nav-item d-flex align-items-center">
+            <i class="fas fa-border-none"></i>
+            <a class="nav-link" href="#">COLLECTIONS</a>
+          </li>
+          <li class="nav-item d-flex align-items-center">
+            <i class="fas fa-shopping-cart"></i>
+            <a class="nav-link" href="#">PURCHASE LIST</a>
+          </li>
+          <li class="nav-item d-flex align-items-center">
+            <a class="nav-link active" aria-current="page" href="#">POST AN AD</a>
+          </li>
+        </ul>
+      </div>
+      <i class="far fa-comment-dots"></i>
+      <a class="nav-item nav-link navbar-nav me-auto mb-2 mb-lg-0" href="#">Sunil Kumar</a>
+      <img src="..." class="img-thumbnail" alt="...">
+    </div>
+  </nav>
+  <section class="container-fluid bg-reddis col-12 d-flex flex-column justify-content-center align-items-center py-5">
+    <div class="d-flex flex-column justify-content-center align-items-center py-5">
+       <h1>ZATTIX</h1>
+       <P>Buying and Selling be Simpler than This!</P>
+    </div>
+    <div class="input-group container-fluid col-6 mb-3 d-flex px-5 mx-5">
+     <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">All Departments</button>
+    <ul class="dropdown-menu">
+     <li><a class="dropdown-item" href="#">Mobiles</a></li>
+     <li><a class="dropdown-item" href="#">Laptops</a></li>
+     <li><a class="dropdown-item" href="#">Cameras</a></li>
+     <li><hr class="dropdown-divider"></li>
+     <li><a class="dropdown-item" href="#">Other Electronics</a></li>
+  </ul>
+    <input type="text" aria-label="First name" class="form-control" placeholder="What do you search for?">
+    <input type="text" aria-label="Last name" class="form-control">
+    <button type="button" class="btn btn-secondary btn-sm">Search</button>
+  </div>
+  </section>
 
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+ <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
