add nav footer CSS

--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item d-flex align-items-center">
-            <i class="fas fa-home"></i>
-            <a class="nav-link" href="#">HOME</a>
+          <li class="nav-item d-flex align-items-center mx-3 nav-element">
+            <i class="fas fa-home pr-2"></i>
+            <a class="nav-element" href="#">HOME</a>
           </li>
-          <li class="nav-item d-flex align-items-center">
-            <i class="fas fa-border-none"></i>
-            <a class="nav-link" href="#">COLLECTIONS</a>
+          <li class="nav-item d-flex align-items-center mx-3 nav-element">
+            <i class="fas fa-caret-square-down pr-2"></i>
+            <a class="nav-element" href="#">COLLECTIONS</a>
           </li>
-          <li class="nav-item d-flex align-items-center">
-            <i class="fas fa-shopping-cart"></i>
-            <a class="nav-link" href="#">PURCHASE LIST</a>
+          <li class="nav-item d-flex align-items-center mx-3 nav-element">
+            <i class="fas fa-shopping-cart pr-2"></i>
+            <a class="nav-element" href="#">PURCHASE LIST</a>
           </li>
-          <li class="nav-item d-flex align-items-center">
+          <li class="nav-item d-flex align-items-center bg-reddis mx-3">
             <a class="nav-link active" aria-current="page" href="#">POST AN AD</a>
           </li>
         </ul>
       </div>
-      <i class="far fa-comment-dots"></i>
-      <a class="nav-item nav-link navbar-nav me-auto mb-2 mb-lg-0" href="#">Sunil Kumar</a>
-      <img src="..." class="img-thumbnail" alt="...">
+      <i class="fas fa-envelope-square fa-lg nav-element px-2"></i>
+      <a class="profile-name px-2" href="#">SunilKumar</a>
+      <img src="./assets/profile.jpg" class="rounded-circle" width="24" height="24" alt="profile photo">
     </div>
   </nav>
   <section class="container-fluid bg-reddis col-12 d-flex flex-column justify-content-center align-items-center py-5">
@@ -143,12 +143,14 @@
       </a>
     </div>
   </section>
-  
-  <div class="d-flex align-items-center px-5 m-3 border-bottom">
+  <section class="d-flex justify-content-between align-items-center border-bottom">
+  <div class="d-flex align-items-center px-5 m-3">
     <i class="fab fa-500px fa-lg mr-2 mb-2"></i>
-    <h5>General items</h5>
+    <h5>Mixed Items</h5>
     <p class="mt-2 ml-2 text-muted">(Ipad Projector Recorder Video Camera and More)</p>
   </div>
+  <div><h6 class="reddis-color px-5">View All</h6></div>
+</section>
 
 <section id="demo" class="carousel slide d-flex row py-3" data-ride="carousel">
  
@@ -336,11 +338,14 @@
   </a>
 </section>
 
-<div class="d-flex align-items-center px-5 m-3 border-bottom">
-  <i class="fas fa-mobile-alt fa-lg mr-2 mb-2"></i>
-  <h5>General items</h5>
-  <p class="mt-2 ml-2 text-muted">(Mobiles Celphones Charger and More)</p>
-</div>
+<section class="d-flex justify-content-between align-items-center border-bottom">
+  <div class="d-flex align-items-center px-5 m-3">
+    <i class="fab fa-500px fa-lg mr-2 mb-2"></i>
+    <h5>Mobile Phones</h5>
+    <p class="mt-2 ml-2 text-muted">(Cellphone Mobile phones and Etc)</p>
+  </div>
+  <div><h6 class="reddis-color px-5">View All</h6></div>
+</section>
   
 
 <section id="demo" class="carousel slide d-flex row" data-ride="carousel">
@@ -528,11 +533,14 @@
   </a>
 </section>
 
-<div class="d-flex align-items-center px-5 m-3 border-bottom">
-  <i class="fas fa-laptop fa-lg mr-2 mb-2"></i>
-  <h5>General items</h5>
-  <p class="mt-2 ml-2 text-muted">(Laptops Desktops Hardware and More)</p>
-</div>
+<section class="d-flex justify-content-between align-items-center border-bottom">
+  <div class="d-flex align-items-center px-5 m-3">
+    <i class="fab fa-500px fa-lg mr-2 mb-2"></i>
+    <h5>Computers</h5>
+    <p class="mt-2 ml-2 text-muted">(Laptops Desktops and Etc)</p>
+  </div>
+  <div><h6 class="reddis-color px-5">View All</h6></div>
+</section>
 
 <section id="demo" class="carousel slide d-flex row" data-ride="carousel">
 
@@ -718,6 +726,74 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </section>
+<section class="container-fluid d-flex justify-content-between align-items-center py-5 bg-light">
+  <div class="d-flex flex-column justify-content-center col-md-3 mx-2"> 
+    <a class="d-flex align-items-center" href="#">
+    <!-- <img src="./assets/logo.png" alt="main-logo" class="d-inline-block align-top"> -->
+    ZATTIX
+  </a>
+  <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used before final copy.</p>
+ </div>
+ <div class="d-flex flex-column col-md-3 mx-2 my-0">
+   <h6 class="border-bottom reddis-color">Categories</h6>
+   <div class="d-flex">
+   <ul class="d-flex flex-column">
+     <li>Mobile Phones</li>
+     <li>Computers</li>
+     <li>Desktops</li>
+     <li>General Electronics</li>
+     <li>Spare Parts</li>
+     <li>Computer Parts</li>
+     <li>More</li>
+   </ul>
+   <ul class="d-flex flex-column">
+    <li>Mobile Phones</li>
+    <li>Computers</li>
+    <li>Desktops</li>
+    <li>General Electronics</li>
+    <li>Spare Parts</li>
+    <li>Computer Parts</li>
+    <li>More</li>
+  </ul>
+ </div>
+ </div>
+ <div class="d-flex flex-column col-md-3 mx-2">
+  <h6 class="border-bottom reddis-color">Navigation</h6>
+  <ul class="d-flex flex-column">
+    <li>Home</li>
+    <li>Sign Up</li>
+    <li>Sign In</li>
+    <li>Terms and Conditions</li>
+    <li>FAQ</li>
+    <li>Help</li>
+    <li>Contact Us</li>
+  </ul>
+  </div>
+  <div class="d-flex col-md-3 flex-column justify-content-center mx-2">
+    <div class="d-flex justify-content-around align-items-center">
+      <h6 class="reddis-color">Country</h6>
+      <button type="button" class="btn btn-outline-secondary">Ecuador</button>
+    </div>
+    <div class="d-flex justify-content-around align-items-center">
+      <h6 class="reddis-color">Language</h6>
+      <button type="button" class="btn btn-outline-secondary">English</button>
+    </div>
+    <div class="d-flex justify-content-around align-items-center">
+      <h6 class="reddis-color">Currency</h6>
+      <button type="button" class="btn btn-outline-secondary">US Dollar</button>
+    </div>
+  </div>
+</section>
+<footer class="container-fluid d-flex justify-content-between align-items-center px-4 py-3 bg-light border-top">
+  <p class="pl-2 pt-2">Copy rights @Zattix 2020. all rights reserved. Designed by Sunil</p>
+  <div>
+    <i class="fab fa-facebook-f px-2"></i>
+    <i class="fab fa-yahoo px-2"></i>
+    <i class="fab fa-twitter px-2"></i>
+    <i class="fab fa-linkedin-in px-2"></i>
+    <i class="fab fa-google-plus-g px-2"></i>
+  </div>
+</footer>
 
 
 
