Add search page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style-reset.css">
   <link rel="stylesheet" href="./style.css">
+  <link rel="search-page" href="./search.html">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" crossorigin="anonymous">
   <link rel="fonts" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
@@ -49,7 +50,7 @@
       <img src="./assets/profile.jpg" class="rounded-circle" width="24" height="24" alt="profile photo">
     </div>
   </nav>
-  <section class="container-fluid bg-reddis col-12 d-flex flex-column justify-content-center align-items-center py-5">
+  <section class="container-fluid bg-reddis d-none col-md-12 d-md-flex flex-column justify-content-center align-items-center py-5">
     <div class="d-flex flex-column justify-content-center align-items-center py-5 white">
        <h1>ZATTIX</h1>
        <P>Buying and Selling be Simpler than This!</P>
@@ -65,7 +66,7 @@
   </ul>
     <input type="text" aria-label="First name" class="form-control mr-1" placeholder="What do you search for?">
     <input type="text" aria-label="Last name" class="form-control mr-2">
-    <button type="button" class="btn btn-secondary btn-md bg-nav ml-1">Search</button>
+    <a href="./search.html" alt="Search-Page"><button type="button" class="btn btn-secondary btn-md bg-nav ml-1">Search</button></a>
   </div>
   </section>
   <section class="d-flex justify-content-end align-items-center col-4">
@@ -157,7 +158,7 @@
   <div><h6 class="reddis-color px-5">View All</h6></div>
 </section>
 
-<section id="demo" class="carousel slide d-flex row py-3 bg-light" data-ride="carousel">
+<section id="demo" class="carousel slide d-md-flex row py-3 bg-light" data-ride="carousel">
   <!-- The slideshow -->
   <div class="container carousel-inner no-padding">
     <div class="carousel-item active d-flex justify-content-between">
@@ -730,7 +731,7 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </section>
-<section class="container-fluid d-flex justify-content-between align-items-center py-5">
+<section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
   <div class="d-flex flex-column justify-content-center col-md-3 mx-2"> 
     <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="#">
     <img src="./assets/footer-logo.png" alt="main-logo"  id="footer-image">
@@ -788,9 +789,9 @@
     </div>
   </div>
 </section>
-<footer class="container-fluid d-flex justify-content-between align-items-center px-4 py-3 border-top">
+<footer class="container-fluid d-sm-flex justify-content-between align-items-center px-4 py-3 border-top">
   <p class="pl-2 pt-2 text-muted">Copy rights @Zattix 2020. all rights reserved. Designed by Sunil</p>
-  <div class="text-muted">
+  <div class="text-muted align-center">
     <i class="fab fa-facebook-f px-2"></i>
     <i class="fab fa-yahoo px-2"></i>
     <i class="fab fa-twitter px-2"></i>
