add search page content

--- a/search.html
+++ b/search.html
@@ -68,6 +68,247 @@
     <button type="button" class="btn btn-secondary btn-md bg-nav ml-1">Search</button>
   </div>
   </section>
+
+<section class="d-flex col-12 bg-light">
+  <div class="col-2 p-3">
+  <div class="d-flex py-3">
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label mt-1" for="flexCheckDefault">
+        New
+      </label>
+    </div>
+    <div class="form-check ml-3 text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        Used
+      </label>
+    </div>
+  </div>
+  <div class="pb-3"> 
+    <p class="border-bottom pb-2">Type</p>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label mt-1" for="flexCheckDefault">
+        Mobile Phones
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        Laptops
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        Cameras
+      </label>
+    </div>
+  </div>
+  <div class="pb-3">
+    <p class="border-bottom pb-2">Size</p>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label mt-1" for="flexCheckDefault">
+        Normal
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        Small
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <div class="d-flex">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        Custom
+      </label>
+      <input class="form-control form-control-sm mx-4" type="text" placeholder="5" aria-label=".form-control-sm example">
+    </div>
+    </div>
+  </div>
+  <div class="pb-3">
+    <p class="border-bottom pb-2">Price Range</p>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label mt-1" for="flexCheckDefault">
+        10$ - 100$
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        100$ - 200$
+      </label>
+    </div>
+    <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        200$ - 400$
+      </label>
+    </div>
+      <div class="form-check text-muted">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+      <label class="form-check-label mt-1" for="flexCheckChecked">
+        500$ +
+      </label>
+    </div>
+  </div>
+  </div>
+  <div class="col-10 border">
+  <h6 class="p-4">138 <span class="text-muted">Results for </span>"Mobile Phones" <span class="text-muted">search at</span> Cuenca <span class="text-muted">in Category</span> Mobiles</h6>
+  <div class="border-top border-bottom">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="./assets/image1.jpg" height="100%" alt="laptop-image">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+          <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+          <div class="dropup">
+            <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+            <div class="dropup-content">
+              <a href="#">Add to Collection</a>
+              <a href="#" class="bg-nav" id="white">Send a Message</a>
+              <a href="#">More Details</a>
+            </div>
+          </div>
+          </div>
+          <h5 class="reddis-color">New</h5>
+          <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+          <div class="d-flex justify-content-between align-items-center">
+          <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+          <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="border-top border-bottom">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="./assets/image2.jpg" height="100%" alt="laptop-image">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center">
+          <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+          <div class="dropup">
+            <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+            <div class="dropup-content">
+              <a href="#">Add to Collection</a>
+              <a href="#" class="bg-nav" id="white">Send a Message</a>
+              <a href="#">More Details</a>
+            </div>
+          </div>
+          </div>
+          <h5 class="reddis-color">New</h5>
+          <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+          <div class="d-flex justify-content-between align-items-center">
+          <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+          <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="border-top border-bottom">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./assets/image3.jpeg" height="100%" alt="laptop-image">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+            <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+            <div class="dropup">
+              <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+              <div class="dropup-content">
+                <a href="#">Add to Collection</a>
+                <a href="#" class="bg-nav" id="white">Send a Message</a>
+                <a href="#">More Details</a>
+              </div>
+            </div>
+            </div>
+            <h5 class="reddis-color">New</h5>
+            <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+            <div class="d-flex justify-content-between align-items-center">
+            <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+            <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="border-top border-bottom">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./assets/image4.jpeg" height="100%" alt="laptop-image">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+            <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+            <div class="dropup">
+              <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+              <div class="dropup-content">
+                <a href="#">Add to Collection</a>
+                <a href="#" class="bg-nav" id="white">Send a Message</a>
+                <a href="#">More Details</a>
+              </div>
+            </div>
+            </div>
+            <h5 class="reddis-color">New</h5>
+            <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+            <div class="d-flex justify-content-between align-items-center">
+            <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+            <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="border-top border-bottom">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./assets/image5.jpeg" height="100%" alt="laptop-image">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+            <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+            <div class="dropup">
+              <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+              <div class="dropup-content">
+                <a href="#">Add to Collection</a>
+                <a href="#" class="bg-nav" id="white">Send a Message</a>
+                <a href="#">More Details</a>
+              </div>
+            </div>
+            </div>
+            <h5 class="reddis-color">New</h5>
+            <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+            <div class="d-flex justify-content-between align-items-center">
+            <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+            <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
+
+</div>
   
 
 <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
