Add search page css

--- a/search.html
+++ b/search.html
@@ -54,7 +54,7 @@
   </nav>
   <section
     class="container-fluid bg-reddis d-none col-md-12 d-md-flex flex-column justify-content-center align-items-center py-5">
-    <div class="d-flex flex-column justify-content-center align-items-center py-5 white">
+    <div class="d-flex flex-column py-2 white">
       <h1>ZATTIX</h1>
       <P>Buying and Selling be Simpler than This!</P>
     </div>
@@ -77,9 +77,9 @@
   </section>
 
   <section class="d-flex col-12 bg-light">
-    <div class="col-2 p-3">
+    <div class="col-2 d-sm-none d-md-block p-3">
       <div class="d-flex py-3">
-        <div class="form-check text-muted">
+        <div class="form-check d-flex flex-xs-column flex-md-row text-muted">
           <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
           <label class="form-check-label mt-1" for="flexCheckDefault">
             New
@@ -169,10 +169,130 @@
     <div class="border">
       <h6 class="p-4">138 <span class="text-muted">Results for </span>"Mobile Phones" <span class="text-muted">search
           at</span> Cuenca <span class="text-muted">in Category</span> Mobiles</h6>
-      <div class="border-top border-bottom">
+      <div class="border-top border-bottom my-2">
         <div class="row g-0">
           <div class="col-md-3">
-            <img src="./assets/image1.jpg" class="search-image" alt="laptop-image">
+            <img src="./assets/image1.jpg" class="search-image p-2" alt="laptop-image">
+          </div>
+          <div class="col-md-9">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <div class="dropup">
+                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+                  <div class="dropup-content">
+                    <a href="#">Add to Collection</a>
+                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#">More Details</a>
+                  </div>
+                </div>
+              </div>
+              <h5 class="reddis-color">New</h5>
+              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-top border-bottom my-2">
+        <div class="row g-0">
+          <div class="col-md-3">
+            <img src="./assets/image2.jpg" class="search-image p-2" alt="laptop-image">
+          </div>
+          <div class="col-md-9">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <div class="dropup">
+                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+                  <div class="dropup-content">
+                    <a href="#">Add to Collection</a>
+                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#">More Details</a>
+                  </div>
+                </div>
+              </div>
+              <h5 class="reddis-color">New</h5>
+              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-top border-bottom my-2">
+        <div class="row g-0">
+          <div class="col-md-3">
+            <img src="./assets/image3.jpeg" class="search-image p-2" alt="laptop-image">
+          </div>
+          <div class="col-md-9">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <div class="dropup">
+                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+                  <div class="dropup-content">
+                    <a href="#">Add to Collection</a>
+                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#">More Details</a>
+                  </div>
+                </div>
+              </div>
+              <h5 class="reddis-color">New</h5>
+              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-top border-bottom my-2">
+        <div class="row g-0">
+          <div class="col-md-3">
+            <img src="./assets/image4.jpeg" class="search-image p-2" alt="laptop-image">
+          </div>
+          <div class="col-md-9">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <div class="dropup">
+                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+                  <div class="dropup-content">
+                    <a href="#">Add to Collection</a>
+                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#">More Details</a>
+                  </div>
+                </div>
+              </div>
+              <h5 class="reddis-color">New</h5>
+              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-top border-bottom my-2">
+        <div class="row g-0">
+          <div class="col-md-3">
+            <img src="./assets/image5.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-9">
             <div class="card-body">
@@ -202,97 +322,7 @@
       <div class="border-top border-bottom">
         <div class="row g-0">
           <div class="col-md-3">
-            <img src="./assets/image2.jpg" class="search-image" alt="laptop-image">
-          </div>
-          <div class="col-md-9">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
-                <div class="dropup">
-                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
-                  <div class="dropup-content">
-                    <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
-                    <a href="#">More Details</a>
-                  </div>
-                </div>
-              </div>
-              <h5 class="reddis-color">New</h5>
-              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
-                additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="border-top border-bottom">
-        <div class="row g-0">
-          <div class="col-md-3">
-            <img src="./assets/image3.jpeg" class="search-image" alt="laptop-image">
-          </div>
-          <div class="col-md-9">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
-                <div class="dropup">
-                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
-                  <div class="dropup-content">
-                    <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
-                    <a href="#">More Details</a>
-                  </div>
-                </div>
-              </div>
-              <h5 class="reddis-color">New</h5>
-              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
-                additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="border-top border-bottom">
-        <div class="row g-0">
-          <div class="col-md-3">
-            <img src="./assets/image4.jpeg" class="search-image" alt="laptop-image">
-          </div>
-          <div class="col-md-9">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
-                <div class="dropup">
-                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
-                  <div class="dropup-content">
-                    <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
-                    <a href="#">More Details</a>
-                  </div>
-                </div>
-              </div>
-              <h5 class="reddis-color">New</h5>
-              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
-                additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="border-top border-bottom">
-        <div class="row g-0">
-          <div class="col-md-3">
-            <img src="./assets/image5.jpeg" class="search-image" alt="laptop-image">
+            <img src="./assets/image6.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-9">
             <div class="card-body">
@@ -321,6 +351,25 @@
       </div>
     </div>
     </div>
+  </section>
+  <section class="d-flex justify-content-center bg-light py-5">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link nav-element1 mx-2" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link nav-element1 mx-2" href="#">1</a></li>
+        <li class="page-item"><a class="page-link nav-element1 mx-2" href="#">2</a></li>
+        <li class="page-item"><a class="page-link nav-element1 mx-2" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link nav-element1 mx-2" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </section>
 
   <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
